# CppDic

./: CMakeLists.txt  Readme.md
cmake/: cpp.cmake  utils.cmake
lib/: CMakeLists.txt
lib/include/cppdic/: Service.hpp  ServiceProvider.hpp  ServiceProviderBuilder.hpp  Utils.hpp
lib/include/cppdic/utils/: CanConstructTypeFromAListOfTuples.hpp  CanConstructTypeFromAtLeastOnePrefixSubset.hpp  CanConstructTypeFromAtLeastOneTuplePrefixSubset.hpp  CanConstructTypeFromTuple.hpp  GetIndex.hpp  MakeSharedFromTuple.hpp  Permutations.hpp  TypesAfter.hpp  TypesBefore.hpp
tests/: CMakeLists.txt
tests/include/: CommonTypes.hpp
tests/src/: CanConstructTypeFromAListOfTuplesTests.cpp  CanConstructTypeFromAtLeastOneTuplePrefixSubsetTests.cpp  CanConstructTypeFromTupleTests.cpp  GetItemTests.cpp  Main.cpp  PermutationsTests.cpp  ServiceProviderBuilderTests.cpp  TypesAfterTests.cpp  TypesBeforeTests.cpp
